@@ -6,10 +6,27 @@ def env(key: String): Option[String] = Option(System.getenv(key))
 
 lazy val root = (project in file(".")).enablePlugins(PlayScala, RiffRaffArtifact, JDebPackaging)
     .settings(
-      play.sbt.PlayImport.PlayKeys.playDefaultPort := 8460
+      play.sbt.PlayImport.PlayKeys.playDefaultPort := 9000
     )
 
 scalaVersion := "2.11.8"
+
+javaOptions in Universal ++= Seq(
+  "-Dpidfile.path=/dev/null",
+  "-J-XX:MaxRAMFraction=2",
+  "-J-XX:InitialRAMFraction=2",
+  "-J-XX:MaxMetaspaceSize=500m",
+  "-J-XX:+PrintGCDetails",
+  "-J-XX:+PrintGCDateStamps",
+  s"-J-Xloggc:/var/log/${name.value}/gc.log"
+)
+
+maintainer := "Anne Byrne <anne.byrne@theguardian.com>"
+
+packageSummary := "Digital Department Website"
+
+packageDescription := """The Guardian Digital website for Dig Dev and Enterprise Technology"""
+
 
 libraryDependencies ++= Seq(
   ws,
@@ -32,6 +49,7 @@ packageDescription := """Slightly longer description"""
 riffRaffPackageType := (packageBin in Debian).value
 
 riffRaffBuildIdentifier := env("BUILD_NUMBER").getOrElse("DEV")
+riffRaffManifestVcsUrl := "git@github.com:guardian/digital-department-website.git"
 riffRaffUploadArtifactBucket := Option("riffraff-artifact")
 riffRaffUploadManifestBucket := Option("riffraff-builds")
 
